# betterbiz-backend

./: .env  Dockerfile  Procfile  README.md  api_documentation.md  backup.sql  database_backup.sql  datadump.json  db.sqlite3  main.py  manage.py  pyproject.toml  quickbooks.ipynb  quickbooks_json.py  quickbooks_score.py  requirements.txt  utils.py
account/: api_views.py  forms.py  models.py  serializer.py  urls.py
account/migrations/: 0001_initial.py  0002_user_address_user_business_name_user_contact_and_more.py  0003_user_email_verified.py  0004_remove_user_business_name_remove_user_industry.py  0005_alter_user_avatar.py  0006_user_has_answered_questionnaire.py  0007_rename_has_answered_questionnaire_user_has_completed_questionnaire.py  0008_user_default_company.py
api_miners/: apps.py  urls.py  views.py
betterbiz/: settings.py  urls.py  wsgi.py
betterbiz_backend/: asgi.py  settings.py  urls.py  wsgi.py
business/: api_views.py  forms.py  models.py  serializer.py  urls.py
business/migrations/: 0001_initial.py  0002_alter_businessscore_id.py  0002_initial.py  0003_alter_businessscore_id.py  0003_initial.py  0004_business_city_business_country_business_date_founded_and_more.py  0004_businessscore_user.py  (+8 more)
chat/: api_views.py  models.py  serializers.py  urls.py
miners/: admin.py  apps.py  models.py
payment/: models.py  serializer.py
questionnaire/: api_views.py  forms.py  models.py  serializer.py  urls.py
settings/: base.py  development.py  production.py
shared/: base_viewsets.py
user_account/: api_views.py  forms.py  models.py  serializer.py  urls.py
(+70 files in other folders)
